bugfix: Fix background images getting cut off in header.

--- a/reddit_donate/public/static/css/donate.less
+++ b/reddit_donate/public/static/css/donate.less
@@ -102,6 +102,7 @@ a {
   @line-base: @line-small;
 
   margin: (@margin-xx-large * 2px) auto;
+  overflow: visible;
   position: relative;
 
   h2 {
